[package]
name = "rust-clean-ddd-modular"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "shared",
    "modules/identity/domain",
    "modules/identity/shared",
    "modules/identity/workflows",
    "modules/identity/adapters",
    "modules/identity/transport",
]

[dependencies]
# Feature flags for optional modules
identity = { path = "./modules/identity/transport", optional = true }

[features]
default = ["identity"]
identity = ["dep:identity"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
kanal = "0.1.0-pre9"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
bcrypt = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
